# serp-test

./: .gitignore  README.md  Solv.py  download.py  google.py  hi.py  hinew.py  kwd.csv  new-dont-touch.py  new_google.py  pyproject.toml
output/: serps_20250128.csv
